Try to fix aspect ratio bug on iOS

--- a/css/main.css
+++ b/css/main.css
@@ -495,35 +495,17 @@ header h1 span i {
         padding 0s linear;
 	flex-wrap:wrap;
     flex-direction:column;
-    @supports not (aspect-ratio: auto) { 
-        padding-top:100%;
-        height:0;
-        position:relative;
-        overflow:hidden;
-    }
 }
 
 .main-carousel {
     aspect-ratio:1;
     margin:-1.5em;
     width:calc(100% + 3em);
-    @supports not (aspect-ratio: auto) { 
-        padding-top:100%;
-        height:0;
-        position:relative;
-        overflow:hidden;
-    }
 }
 
 .main-carousel img {
     width:100%;
     aspect-ratio:1;
-    @supports not (aspect-ratio: auto) { 
-        padding-top:100%;
-        height:0;
-        position:relative;
-        overflow:hidden;
-    }
 }
 
 .flickity-page-dots {
@@ -1262,13 +1244,6 @@ modal {
     .grid .item.inactive:not(.small) {
         width:95%;
         aspect-ratio:unset;
-
-        @supports not (aspect-ratio: auto) { 
-            padding-top:2rem;
-            height:auto;
-            position:relative;
-            overflow:visible;
-        }
     }
 
     .grid .item.inactive:not(.small) .front img {
